feat: Gemini API 연ëI 이모지 (#8)